--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-  "framework": "nextjs",
+  "builds": [
+    { "src": "frontend/next.config.js", "use": "@vercel/next" }
+  ],
   "installCommand": "cd frontend && npm ci --include=dev",
   "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/.next"
+  "routes": [
+    { "src": "/(.*)", "dest": "/$1" }
+  ]
 }
 
 
