Vercel: simplify config; rely on Root Directory=frontend and default install/build

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "builds": [
-    { "src": "frontend/next.config.js", "use": "@vercel/next" }
-  ],
-  "installCommand": "cd frontend && npm ci --include=dev",
-  "buildCommand": "cd frontend && npm run build",
-  "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
+  "framework": "nextjs"
 }
 
 
