--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
   },
   "devDependencies": {
+    "@vercel/node": "^5.5.3",
     "concurrently": "^8.2.2"
   }
 }
